# terraform-sample

./: .gitignore  .terraform.lock.hcl  LICENSE  README.md  main.py  main.tf  pyproject.toml  sonar-project.properties  variables.tf
.github/workflows/: dev-checks-python-app.yml  development-checks.yml  evaluate-release-candidate.yml  github-actions-demo.yml  merge-to-main.yml
features/app/: create_account.feature
tests/behavioural/: conftest.py
tests/behavioural/app/: test_create_account.py
